--- a/src/main/resources/messages/message_en.properties
+++ b/src/main/resources/messages/message_en.properties
@@ -1,2 +1,72 @@
-title = Hello i18n!;
-createmay=Create marchine
+#title
+title = Manage System
+title.createmay = Create New Machine
+title.createkhachhang = Create New Customer
+title.createdichvu = Create New Service
+title.createSuDungDichVu = Create New Service Use
+title.createSuDungMay = Create New Machine Use
+title.listDichVu = List of Services
+title.listMay = List of Machines
+title.listKhachHang = List of Customers
+title.userUseServiceAndMachine = List of Machine and Service Use
+
+#button
+btn.submit = Submit
+btn.reset = Reset
+
+# Error
+error.required=Field is required
+error.alpha=Only alphabetic characters are allowed
+error.numeric=Only numeric characters are allowed
+
+#search
+text.search = Search
+
+#form
+form.maDV = Service Code
+form.tenDV = Service Name
+form.unit = Unit of Measurement
+form.price = Unit Price
+form.placeholder.maDV = Enter service code
+form.placeholder.tenDV = Enter service name
+form.placeholder.unit = Enter unit of measurement
+form.placeholder.price = Enter unit price
+form.maKH  = Customer Code
+form.placeholder.maKH = Enter customer code
+form.tenKH = Customer Name
+form.placeholder.tenKH = Enter customer name
+form.email  = Email
+form.placeholder.email  = Enter email your_email@example.com
+form.phone = Phone Number
+form.placeholder.phone  = Enter phone number
+form.address  = Address
+form.placeholder.address  = Enter address
+form.maMay = Machine Code
+form.placeholder.maMay = Enter machine code
+form.position = Position
+form.placeholder.position = Enter position
+form.status = Status
+form.placeholder.status = Enter status
+form.dateUse = Use Date
+form.placeholder.dateUse = Enter use date
+form.timeUse = Use Time
+form.placeholder.timeUse = Enter use time
+form.quantity = Quantity
+form.placeholder.quantity = Enter quantity
+form.timeStart = Start Time
+form.placeholder.timeStart = Enter start time
+
+#table
+table.header.customerCode=Customer Code
+table.header.customerName=Customer Name
+table.header.machineCode=Machine Code
+table.header.position=Position
+table.header.status=Status
+table.header.startDateMachineUsage=Start Date Machine Usage
+table.header.startTimeMachineUsage=Start Time Machine Usage
+table.header.usageTime=Usage Time
+table.header.serviceCode=Service Code
+table.header.serviceDate=Service Date
+table.header.serviceTime=Service Time
+table.header.quantity=Quantity
+table.header.totalAmount=Total Amount
