--- a/src/main/resources/messages/message_vi.properties
+++ b/src/main/resources/messages/message_vi.properties
@@ -1,8 +1,72 @@
 #title
+title = Quản lý hệ thống
 title.createmay=Tạo mới máy
 title.createkhachhang=Tạo mới khách hàng
 title.createdichvu=Tạo mới dịch vụ
 title.createSuDungDichVu=Tạo mới sử dụng dịch vụ
 title.createSuDungMay=Tạo mới sử dụng máy
 title.listDichVu = Danh sách dịch vụ
-title.listDichMay = Danh sách máy
+title.listMay = Danh sách máy
+title.listKhachHang=Danh sách khách hàng
+title.userUseServiceAndMachine = Danh sách sử dụng máy và dịch vụ
+
+#button
+btn.submit = Gửi
+btn.reset = Đặt lại
+
+#Error
+error.required=Không được để trống
+error.alpha=Chỉ được nhập chữ cái
+error.numeric=Chỉ được nhập số
+
+#search
+text.search = Tìm kiếm
+
+#form 
+form.maDV =Mã dịch vụ
+form.tenDV=Tên dịch vụ
+form.unit=Đơn vị tính
+form.price=Đơn giá
+form.placeholder.maDV=Nhập mã dịch vụ
+form.placeholder.tenDV=Nhập tên dịch vụ
+form.placeholder.unit=Nhập đơn vị tính
+form.placeholder.price = Nhập đơn giá
+form.maKH =Mã khách	hàng
+form.placeholder.maKH=Nhập mã khách hàng
+form.tenKH=Tên khách hàng
+form.placeholder.tenKH=Nhập tên khách hàng
+form.email = Email
+form.placeholder.email = Nhập email your_email@example.com
+form.phone=Số điện thoại
+form.placeholder.phone = Nhập số điện thoại
+form.address = Địa chỉ
+form.placeholder.address = Nhập địa chỉ
+form.maMay = Mã máy
+form.placeholder.maMay = Nhập mã máy
+form.position= Vị trị
+form.placeholder.position = Nhập vị trí
+form.status = Trạng thái
+form.placeholder.status = Nhập trạng thái
+form.dateUse = Ngày sử dụng
+form.placeholder.dateUse = Nhập ngày sử dụng
+form.timeUse = Thời gian sử dụng
+form.placeholder.timeUse = Nhập thời gian sử dụng
+form.quantity=Số lượng
+form.placeholder.quantity= Nhập số lượng
+form.timeStart = Thời gian bắt đầu
+form.placeholder.timeStart = Nhập thời gian bắt đầu
+
+#table
+table.header.customerCode=Mã KH
+table.header.customerName=Tên KH
+table.header.machineCode=Mã Máy
+table.header.position=Vị trí
+table.header.status=Trạng Thái
+table.header.startDateMachineUsage=Ngày Bắt Đầu Sử Dụng Máy
+table.header.startTimeMachineUsage=Giờ Bắt Đầu Sử Dụng Máy
+table.header.usageTime=Thời Gian Dùng
+table.header.serviceCode=Mã DV
+table.header.serviceDate=Ngày Sử Dụng Dịch Vụ
+table.header.serviceTime=Giờ Sử Dụng Dịch Vụ
+table.header.quantity=Số lượng
+table.header.totalAmount=Tổng Tiền
